[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "danpy"
version = "0.1.0"
authors = [{ name = "Daniel Barker" }]
description = "A collection of utilities used for plotting, formatting and logging."

requires-python = ">=3.10"

dependencies = ["matplotlib", "numpy"]

[tool.ruff]
line-length = 100
